# APA_Code

./: .gitignore  CMakeLists.txt  main.cpp  make_graphs.py
headers/: Benchmark.h  ConvEspacial.h  ConvFrequencial.h  Filtros.h  ImagemCore.h  ImagemFreq.h  TransFourier.h
relatorios/: teste-Esp-Ingenua.csv  teste-Esp-Separavel.csv  teste-Freq-FFT-2-Radix.csv
src/: Benchmarks.cpp  ConvEspacial.cpp  ConvFrequencial.cpp  ImagemCore.cpp  TransFourier.cpp
